# periodictable

./: Cargo.toml  LICENSE  README.md
pkg/: manifest
src/: colors.rs  element_colors.rs  element_data.rs  element_widget.rs  gfxutils.rs  legend_widget.rs  main.rs  threshold.rs
src/widgets/: atom_widget.rs  element_widget.rs  legend_widget.rs  mod.rs
src/windows/: atom_window.rs  main_window.rs  mod.rs
