[package]
name = "periodictable"
description = "Periodic table browser for Redox OS"
repository = "https://github.com/redox-os/orbutils"
version = "0.0.1"
license-file = "LICENSE"
readme = "README.md"
authors = ["Tibor Nagy <xnagytibor@gmail.com>"]

[[bin]]
name = "periodictable"
path = "src/main.rs"

[dependencies]
orbclient = "0.3.12"
orbfont = "0.1.8"
orbtk = "0.2.25"
