[package]
name = "periodictable"
description = "Periodic table browser for Redox OS"
repository = "https://github.com/redox-os/orbutils"
version = "0.0.1"
license-file = "LICENSE"
readme = "README.md"
authors = ["Tibor Nagy <xnagytibor@gmail.com>"]

[[bin]]
name = "periodictable"
path = "src/main.rs"

[dependencies]
natural_constants = { git = "https://github.com/xtibor/natural_constants", branch = "fix-radium"}
orbclient = "0.3.12"
orbfont = { git = "https://github.com/redox-os/orbfont" }
orbtk = "0.2.25"
lazy_static = "0.2"
