[package]
name = "periodictable"
description = "Periodic table browser for Redox OS"
repository = "https://github.com/xtibor/periodictable"
version = "0.1.0"
license-file = "LICENSE"
readme = "README.md"
authors = ["Tibor Nagy <xnagytibor@gmail.com>"]

[[bin]]
name = "periodictable"
path = "src/main.rs"

[dependencies]
natural_constants = { git = "https://github.com/willi-kappler/natural_constants.git" }
orbclient = "0.3"
orbfont = { git = "https://github.com/redox-os/orbfont" }
orbtk = "0.2"
lazy_static = "0.2"
